Fixed caption cutting off on right side of image carousel

--- a/CancerGov/_src/StyleSheets/_image-video-carousel.scss
+++ b/CancerGov/_src/StyleSheets/_image-video-carousel.scss
@@ -48,7 +48,7 @@
 	.slick-slide {
 		background-color: $white;
 		border-color: $white;
-		
+
 		img {
 			margin: auto;
 		}
@@ -65,6 +65,7 @@
 	line-height: 15px;
 	text-align: right;
 	margin-top: 3px;
+	padding-right: 1px;
 }
 
 .ic-caption p {
